ver 2.9.8 (15.00.00)
    : 링크에 이미지 경로 포함시 본문 표시 오류 수정 (신비님 제안)
    : 목록에서 선택 비밀글 설정 (의자왕님 제안)
    : 외부 이미지 썸네일 생성 후 글 수정시 이미지 경로 변경 체크 (도장관님 제안)
    : 그누보드5 - 휴지통 사용시 최근게시물 cache 삭제
    : 그누보드5 - 워터마크 본문 표시 오류 수정 (잿빛푸우님 제안)

    miwit/HISTORY
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/mw.g5.adapter.extend.php
    miwit/mw.proc/mw.file.viewer.php
    miwit/list.skin.php
    miwit/secret_all.php
 
ver 2.9.7 (15.09.23)
    : 파일 업로드 인젝션 취약점 보안 (한국인터넷진흥원에서 알려 주셨습니다.)

    miwit/HISTORY
    miwit/mw.geditor/upload.php
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/mw.comment.image.php
    miwit/mw.proc/mw.comment.image.update.php
    miwit/write_comment_update.head.skin.php
 
ver 2.9.6 (15.09.01)
    : 반응형 지원!
    : 폴더명 mw.basic 에서 miwit 로 변경
    : 그누보드5 - 이미지 새창 (엑노님 제안)
    : 카테고리탭에서 div 태그 제거 (신비님 제안)
    : 크롬 css 돋움폰트적용 오류 수정 (gino님 제안)
    : 퍼머링크 사용시 포인트 차감 메시지 오류 수정 (금광님 제안)
    : 서명 게시판 관리자에서 사용안할시 안보이기 (재아님 제안)
    : 모바일 체크 함수 처리 (엑노님 제안)
    : 본문 버튼 위치 번경
    : 분류 라인 오류 수정
    : win_open -> window.open 으로 변경
    : 카카오스토리 웹공유
    : 엄지 서비스 중지에 따른 옵션 제거
    : 페이지 오류 수정 (쪼리님 제안)

    miwit/HISTORY
    miwit/mw.adm/mw.config.php
    miwit/mw.adm/mw.config.update.php
    miwit/mw.proc/mw.file.viewer.php
    miwit/mw.proc/mw.one.talk.php
    miwit/mw.proc/mw.top.button.php
    miwit/mw.proc/mw.vote.php
    miwit/mw.lib/mw.skin.basic.lib.php
    miwit/mw.lib/mw.function.lib.php
    miwit/list.skin.php
    miwit/write.skin.php
    miwit/write_update.skin.php
    miwit/view.skin.php
    miwit/view_head.skin.php
    miwit/view_comment.skin.php
    miwit/write_comment_update.skin.php

ver 2.9.5 (15.07.01)
    : 디자인 개선
    : QR코드 구글 도메인 변경 (엑노님 제안)
    : SNS퍼가기 구글플러스 추가
    : SNS퍼가기 아이콘 변경
    : PHP_SELF 를 SCRIPT_NAME 으로 변경
    : 썸네일 라운드효과 옵션처리
    : mwt.so 짧은도메인 제거
    : 그누보드5 dhtml 에디터, 관리자만 에디터 사용체크시 오류 (l2zeo님 제안)
    : 그누보드5 퍼머링크 분류 페이징 오류 수정 (백색인간님 제안)
    : 그누보드5 댓글삭제시 포인트삭제 안되는 문제 해결 (그루루님 제안)
    : 그누보드5 글주소복사시 깜빡임 문제 해결 (그루루님 제안)